# learn-opengl

./: CMakeLists.txt  build-windows-debug.ps1
assets/shaders/: triangle.frag  triangle.vert
src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  shader.cpp  shader.h
